--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -325,7 +325,7 @@
                                                 </tr>
                                             }
                                                 </table><hr>
-                                            <a href="@Href("~/Odev/VerdigimOdevler")"><i class="fa fa-plus-circle"></i> @Resources.Resource.lblYeniBirOdevVer</a>
+                                            <a href="@Href("~/Odev/Liste")"><i class="fa fa-plus-circle"></i> @Resources.Resource.lblYeniBirOdevVer</a>
                                            
                                         </div><!--Widget Body-->
                                     </div><!--Widget-->
