--- a/Ajax/Ders/JsonVerilenDersler.cshtml
+++ b/Ajax/Ders/JsonVerilenDersler.cshtml
@@ -18,11 +18,11 @@ if (WebSecurity.IsAuthenticated==false || Roles.IsUserInRole("Ogretici")==false)
     // Eğer sorgu ifadesi boşsa kullanıcının tüm derslerini listele
      if (string.IsNullOrEmpty(q))
      {
-         sorguIfadesi="SELECT * FROM Ders WHERE Arsivlendi=0 AND UserID=" + WebSecurity.CurrentUserId;
+         sorguIfadesi="SELECT * FROM Ders WHERE Arsivlendi=0 AND Silindi=0 AND UserID=" + WebSecurity.CurrentUserId;
      }
      else // aksi halde sorgu ile uyuşan dersleri listele
      {
-          sorguIfadesi="SELECT * FROM Ders WHERE Arsivlendi=0 AND UserID=" + WebSecurity.CurrentUserId + " AND DersAdi LIKE N'" + q + "%'";
+          sorguIfadesi="SELECT * FROM Ders WHERE Arsivlendi=0 AND Silindi=0 AND UserID=" + WebSecurity.CurrentUserId + " AND DersAdi LIKE N'" + q + "%'";
      }
 
     //Sorguyu çalıştır
