--- a/Ajax/Odev/OdevVer.cshtml
+++ b/Ajax/Odev/OdevVer.cshtml
@@ -21,7 +21,7 @@
     var DosyaID=-1;
     var SonTeslimTarihi=DateTime.Now.AddDays(7);
     var db=Database.Open("fb1ae");
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Arsivlendi=0",DersID, WebSecurity.CurrentUserId);
+    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Arsivlendi=0 AND Silindi=0",DersID, WebSecurity.CurrentUserId);
     
     if (queryDers==null)
     {
