--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -41,6 +41,12 @@
     
     var dersSahibi=(queryDers.UserID==WebSecurity.CurrentUserId);
 
+    if (queryDers.Silindi==1)
+    {
+        Response.Redirect("~/Shared/Hata?Kod=derseerisimengellendi");
+        Response.End();  
+    }
+
     if (dersSahibi==false && queryDers.Arsivlendi==1)
     {
         Response.Redirect("~/Shared/Hata?Kod=derseerisimengellendi");
@@ -443,7 +449,7 @@
   </div>
 </div>
 }
-else if (liste=="dosya" && dersSahibi && queryDers.Arsivlendi==0)
+else if (liste=="dosya" && dersSahibi && queryDers.Arsivlendi==0 && queryDers.Silindi=0)
 {
   <div class="modal" id="modalDerseDosyaEkle" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
