--- a/Ders/OgrenciIstatistikleri.cshtml
+++ b/Ders/OgrenciIstatistikleri.cshtml
@@ -38,7 +38,7 @@
            Culture=UICulture="tr-TR";
        }
   
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE UserID=@0 AND Arsivlendi=0 AND DersID=@1",WebSecurity.CurrentUserId,DersID);
+    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE UserID=@0 AND Arsivlendi=0 AND Silindi=0 AND DersID=@1",WebSecurity.CurrentUserId,DersID);
     
     if (queryDers==null)
     {
