--- a/Dosya/Indir.cshtml
+++ b/Dosya/Indir.cshtml
@@ -48,7 +48,7 @@
           }
           else
           {
-              erisimAcik=db.QueryValue("SELECT COUNT(*) FROM DosyaIzinDers WHERE DosyaID=@0 AND DersID IN (SELECT DersID FROM DersTakip WHERE UserID=@1 AND Durum=2) AND DersID NOT IN (select DersID from Ders WHERE Arsivlendi=1)",dosyaID,WebSecurity.CurrentUserId)>0;
+              erisimAcik=db.QueryValue("SELECT COUNT(*) FROM DosyaIzinDers WHERE DosyaID=@0 AND DersID IN (SELECT DersID FROM DersTakip WHERE UserID=@1 AND Durum=2) AND DersID NOT IN (select DersID from Ders WHERE Arsivlendi=1 OR Ders.Silindi=1)",dosyaID,WebSecurity.CurrentUserId)>0;
           }
       }
   }
