--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -449,7 +449,7 @@
   </div>
 </div>
 }
-else if (liste=="dosya" && dersSahibi && queryDers.Arsivlendi==0 && queryDers.Silindi=0)
+else if (liste=="dosya" && dersSahibi && queryDers.Arsivlendi==0 && queryDers.Silindi==0)
 {
   <div class="modal" id="modalDerseDosyaEkle" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
