--- a/Ders/Ayarlar.cshtml
+++ b/Ders/Ayarlar.cshtml
@@ -30,7 +30,7 @@
         Response.End();
     }  
 
-     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1",DersID,WebSecurity.CurrentUserId);
+     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0",DersID,WebSecurity.CurrentUserId);
 
      if (queryDers==null)
         {
