--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -21,7 +21,7 @@
     {
         liste="aktivite";
     }
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0",DersID);
+    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND Silindi=0",DersID);
     var queryKullanici=db.QuerySingle("SELECT * FROM Profiles WHERE UserID=@0",WebSecurity.CurrentUserId);
     var dil=queryKullanici.Dil;   
 
