--- a/Dosya/Ayarlar.cshtml
+++ b/Dosya/Ayarlar.cshtml
@@ -24,8 +24,8 @@
         Response.End();
     }  
 
-     var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1",DosyaID,WebSecurity.CurrentUserId);
-
+     var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1 AND Silindi=0",DosyaID,WebSecurity.CurrentUserId);
+      
      if (queryDosya==null)
         {
             Response.Redirect("~/Shared/Hata");
