--- a/Ajax/Ders/DersAyarKaydet.cshtml
+++ b/Ajax/Ders/DersAyarKaydet.cshtml
@@ -22,7 +22,14 @@
     var db=Database.Open("fb1ae");
  
     // Ders bilgilerini veritabanından oku.
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1",DersID,WebSecurity.CurrentUserId);
+    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0",DersID,WebSecurity.CurrentUserId);
+
+   if (queryDers==null)
+    {
+      Response.StatusCode=502;
+      Response.End();   
+    }
+
 
     // Eğer kullanıcı dersin sahibi değilse bu işlemi yapmaya izni yok hata kodu döndür.
     if (WebSecurity.CurrentUserId!=queryDers.UserID)
