--- a/Ajax/Ders/DosyaEkle.cshtml
+++ b/Ajax/Ders/DosyaEkle.cshtml
@@ -28,8 +28,14 @@
     var db=Database.Open("fb1ae");
 
     // Ders bilgilerini veritabanından oku
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1",DersID, WebSecurity.CurrentUserId);
+    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0 AND Arsivlendi=0",DersID, WebSecurity.CurrentUserId);
     
+    if (queryDers==null)
+    {
+      Response.StatusCode=502;
+      Response.End();   
+    }
+
     // İşlemi yapan kullanıcı dersin sahibi mi ? Eğer değilse hata kodu döndür.
     if (queryDers.UserID!=WebSecurity.CurrentUserId)
     {
