--- a/Ajax/Ders/DersAdresKoduKaydet.cshtml
+++ b/Ajax/Ders/DersAdresKoduKaydet.cshtml
@@ -26,8 +26,15 @@
      var db=Database.Open("fb1ae");
  
      // Ders bilgilerini veritabanından oku
-     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1",DersID,WebSecurity.CurrentUserId);
+     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0",DersID,WebSecurity.CurrentUserId);
    
+    if (queryDers==null)
+    {
+      Response.StatusCode=502;
+      Response.End();   
+    }
+
+
     // Bu işlemi yapan kullanıcı dersin sahibi mi ? 
     // İşlemi yapan kullanıcı dersin sahibi değilse hata kodu döndür
     if (WebSecurity.CurrentUserId!=queryDers.UserID)
