--- a/Ajax/Odev/OdevGonder.cshtml
+++ b/Ajax/Odev/OdevGonder.cshtml
@@ -18,8 +18,15 @@
 
     
     var db=Database.Open("fb1ae");
-    var queryOdev=db.QuerySingle("SELECT * FROM Odev WHERE OdevID=@0",OdevID);
-    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0",queryOdev.DersID);
+    var queryOdev=db.QuerySingle("SELECT * FROM Odev WHERE OdevID=@0 AND Silindi=0",OdevID);
+    var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND Silindi=0 AND Arsivlendi=0",queryOdev.DersID);
+
+    if (queryDers==null)
+     {
+       db.Close();
+       Response.StatusCode=500;
+       Response.End();  
+     }
     
     if (string.IsNullOrEmpty(azureDosyaAdi))
     {
