--- a/Ajax/DersTakip/DersiTakipEt.cshtml
+++ b/Ajax/DersTakip/DersiTakipEt.cshtml
@@ -12,13 +12,23 @@
      
      if (string.IsNullOrEmpty(DersID))
      {
-      
+        
        Response.StatusCode=500;
        Response.End();
      }
 
      
        var db=Database.Open("fb1ae");
+
+       var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND Silindi=0 AND Arsivlendi=0",DersID);
+
+       if (queryDers==null)
+       {
+         db.Close();
+         Response.StatusCode=500;
+         Response.End();   
+       }
+
 
         if (db.QueryValue("SELECT COUNT(*) FROM DersTakip WHERE DersID=@0 AND UserID=@1",DersID,WebSecurity.CurrentUserId)>0)
             {
@@ -37,7 +47,6 @@
     
                     //Bildirim oluştur.
 
-                       var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0",DersID);
                        db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,EylemID,DersID) VALUES(@0,@1,@2,@3)","~/Ders/?DersID=" + DersID + "&Liste=onaybekleyen",WebSecurity.CurrentUserId,3,DersID);
                        var eklenenBildirimID=db.GetLastInsertId();
                        db.Execute("INSERT INTO BildirimOkunmasiGereken(UserID,BildirimID) VALUES(@0,@1)",queryDers.UserID,eklenenBildirimID); 
@@ -53,8 +62,6 @@
 
                db.Execute("INSERT INTO DersTakip(DersID,UserID,Durum) VALUES(@0,@1,1)",DersID,WebSecurity.CurrentUserId);
            
-              var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0",DersID);
-
                //Bildirim oluştur.
                db.Execute("INSERT INTO Bildirim(Url,EylemiYapanUserID,IliskiliOge,EylemID,DersID) VALUES(@0,@1,@2,@3,@4)","~/Ders/?DersID=" + DersID + "&Liste=onaybekleyen",WebSecurity.CurrentUserId,"drsistg" + WebSecurity.CurrentUserId.ToString() + DersID.ToString(),5,DersID);
                var eklenenBildirimID=db.GetLastInsertId();
