--- a/Ajax/Dosya/AyarKaydet.cshtml
+++ b/Ajax/Dosya/AyarKaydet.cshtml
@@ -22,7 +22,14 @@
  
     
      
-     var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1",DosyaID,WebSecurity.CurrentUserId);
+     var queryDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0 AND UserID=@1 AND Silindi=0",DosyaID,WebSecurity.CurrentUserId);
+
+     if (queryDosya==null)
+      {
+        db.Close();
+        Response.StatusCode=500;
+        Response.End();  
+      }
 
     if (WebSecurity.CurrentUserId!=queryDosya.UserID)
     {
