--- a/Ajax/Odev/OdevAyarKaydet.cshtml
+++ b/Ajax/Odev/OdevAyarKaydet.cshtml
@@ -30,8 +30,15 @@
         Response.End();
      }
 
-     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1",queryOdev.DersID,WebSecurity.CurrentUserId);
+     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND UserID=@1 AND Silindi=0",queryOdev.DersID,WebSecurity.CurrentUserId);
 
+    if (queryDers==null)
+     {
+       db.Close();
+       Response.StatusCode=500;
+       Response.End();  
+     }
+    
     if (WebSecurity.CurrentUserId!=queryDers.UserID)
     {
         Response.StatusCode=400;
