--- a/Web/Default.cshtml
+++ b/Web/Default.cshtml
@@ -66,7 +66,7 @@
 
 			<div class="info-wrp cm-item">
 				<h2 class="main-text">Dersler Bulutta...</h2>
-				<p class="sub-text">Dersini buluta taşı, materyalleri paylaş, ödevleri yönet...</p>
+				<p class="sub-text">Sanal sınıfını bulutta oluştur, dosyaları paylaş, ödevleri yönet...</p>
 			    <a href="@Href("~/Hesap/Yeni")" class="btn btn-default btn2">Yeni Öğrenci Hesabı</a>
                 <a href="@Href("~/Hesap/YeniEgitmen")" class="btn btn-default btn2">Yeni Eğitmen Hesabı</a>
 				<a href="@Href("~/Hesap/Giris")" class="btn btn-default btn2">Giriş</a>
@@ -86,7 +86,7 @@
 					<h2 class="title medium">BulutDers Nedir ?</h2>
 				</div>
 				<div class="col-md-6 col-md-offset-1 r">
-					<p>BulutDers, bulut teknolojisinin esnekliğini ve gücünü ders süreçleri içerisinde kullanmayı olanaklı hale getiren çevrimiçi bir hizmettir.  Bulutders ile eğitmenler ders dökümanlarını bulutta depolayıp öğrencilerine paylaşıma açabilir, çevrimiçi ödevler vererek öğrenci gönderilerini değerlendirebilir, öğrencileriyle zamandan ve mekandan bağımsız olarak gerçek zamanlı olarak iletişim kurabilirler. </p>
+					<p>BulutDers, bulut teknolojisini ders süreçleri içerisine entegre eden çevrimiçi bir hizmettir.  Bulutders ile eğitmenler ders dökümanlarını bulutta depolayıp öğrencilerine paylaşıma açabilir, çevrimiçi ödevler vererek öğrenci gönderilerini değerlendirebilir, öğrencileriyle zamandan ve mekandan bağımsız olarak gerçek zamanlı olarak iletişim kurabilirler. </p>
 				</div>
 			</div><!-- / row -->
 		</div><!-- / container -->
@@ -105,7 +105,7 @@
 						<div class="img"><i class="fa fa-share-alt"></i></div>
 						<div class="info">
 							<h2 class="hd">Ders Materyallerine 7/24 Erişim</h2>
-							<p class="sub-txt">Öğrenciler ve eğitmenler, ders materyallerine herhangi bir yerden ve herhangi bir zamanda erişebilirler</p>
+							<p class="sub-txt">BulutDers ile öğrenciler ve eğitmenler, ders materyallerine herhangi bir yerden ve herhangi bir zamanda yüksek hızla erişim sağlarlar.</p>
 						</div>
 					</div><!-- /.info-box -->
 				</div>
